# PROGRAMACION-PARA-CIENCIA-DE-DATOS

./: .buildinfo  README.html  _config.yml  _toc.yml  genindex.html  history_python.html  intro.html  intro_quices_1.html  intro_quices_2.html  intro_quices_2.md  objects.inv  pyproject.toml  quiz_conocimientos_1.html  quiz_conocimientos_1.md  quiz_conocimientos_2.html  quiz_conocimientos_3.html  quiz_conocimientos_3.md  quiz_conocimientos_4.html  quiz_conocimientos_4.md  search.html  searchindex.js  solucion_quiz_2.html
_build/.doctrees/: README.doctree  environment.pickle  history_python.doctree  intro.doctree  intro_quices_1.doctree  quiz_conocimientos_1.doctree  quiz_conocimientos_2.doctree  solucion_quiz_2.doctree
_build/html/: .buildinfo  README.html  genindex.html  history_python.html  intro.html  intro_quices_1.html  objects.inv  quiz_conocimientos_1.html  quiz_conocimientos_2.html  search.html  searchindex.js  solucion_quiz_2.html
_sources/: README.md  history_python.md  intro.md  intro_quices_1.md  intro_quices_2.md  quiz_conocimientos_1.md  quiz_conocimientos_2.md  quiz_conocimientos_3.md  quiz_conocimientos_4.md  solucion_quiz_2.md
extras/: quiz_conocimientos_1.md  quiz_fundamentos_python_kahoot.html  quiz_python_interactivo_v2.html  quiz_regresion_kahoot.html
parte1_intro_python/: 1_1_intro_python.html  1_1_intro_python.ipynb  1_2_strings_listas_diccionarios.html  1_3_funciones_control.html
parte2_pandas/: agrupaciones_pandas.html  agrupaciones_pandas.ipynb  dataframes_pandas.html  filtros_consultas_pandas.html  intro_pandas.html  intro_pandas.ipynb
(+39 files in other folders)
