[project]
name = "jupyterbook-dataciencia"
version = "0.1.0"
description = "Proyecto para Jupyter Book - Programación para Ciencia de Datos"
authors = [
    {name = "Wilmer Pineda Ríos",email = "wilmarpineda@usta.edu.co"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "jupyter-book (>=1.0.4.post1,<2.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "jupyterlab (>=4.4.5,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
